added register and login in handler
